Refactor/abstract FFmpeg detection and Clipboard exports.
+ Moved automatic resolution of the FFmpeg command to its own class (FFmpegResolver) with a transparent interface so nothing else has to worry about which OS is in use.
+ Made FFmpeg command resolution more user-proof (taking notes from ReplayMod's implementation) and made it much more extensible/maintainable.
+ Moved clipboard operations to new class SystemClipboard, also with a transparent interface, meaning RenderScreen no longer has any OS-specific code in it, and adding additional clipboard functionality is now easier.
+ Added a "retry" button to the interface when FFmpeg isn't successfully located, which just runs the detection again, so that players won't have to restart their game after installing FFmpeg.
+ Added unused methods `SystemClipboard.copyImageFile` which takes a path to an image file and puts it in the user's clipboard, and `FFmpegResolver.setCommandOverride` which sets an override for the FFmpeg command, in case a config option for this is added in the future.